update sectionStyle - fix navbar spacing

--- a/CSS/sectionStyle.css
+++ b/CSS/sectionStyle.css
@@ -136,7 +136,7 @@ div>img {
     nav li li a:hover{background:#bdc3c7;background:#FAFBFB}
 
     #clearNav {
-        margin-bottom: 6%;
+        margin-bottom: 10%;
     }
 }
 
